<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp">

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/teal_200"
        android:scaleType="fitXY"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="5dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shadow" />

    <ImageView
        android:id="@+id/img_title_movie"
        android:layout_width="363dp"
        android:layout_height="69dp"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:importantForAccessibility="no"
        android:scaleType="fitStart"
        android:src="@drawable/title_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover_image" />

    <TextView
        android:id="@+id/tv_year_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        android:fontFamily="@font/koho"
        android:textColor="@color/blue_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/img_title_movie"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img_title_movie"
        app:layout_constraintTop_toBottomOf="@id/img_title_movie"
        tools:text="Year" />

    <TextView
        android:id="@+id/tv_additional_information_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_year_movie"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_year_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_year_movie"
        tools:text="13 Episodes" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/dark_blue_variant"
        android:gravity="center"
        app:cardBackgroundColor="@color/dark_blue_variant"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_additional_information_movie">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tv_head_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koho"
                    android:text="@string/description"
                    android:textColor="@color/blue_secondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_head_description"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="1.5sp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Description" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tv_head_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/koho"
                    android:text="@string/cast"
                    android:textColor="@color/blue_secondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_head_cast"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Casts" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tv_head_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koho"
                    android:text="@string/genre"
                    android:textColor="@color/blue_secondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_head_genre"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Genre" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_small"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_detail"
        app:srcCompat="@drawable/small_image" />
</androidx.constraintlayout.widget.ConstraintLayout>